k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pughcv
  namespace: pughcv
  labels:
    app.kubernetes.io/name: pughcv
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pughcv
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
